#ifndef UTILS_HPP
#define UTILS_HPP

#include "private_join_and_compute/crypto/context.h"
#include "private_join_and_compute/crypto/ec_commutative_cipher.h"
#include "private_join_and_compute/crypto/paillier.h"

#include <bitset>
#include <vector>
#include <cmath>

// typedef std::tuple<ECPoint, BigNum> EncryptedElement;
// typedef std::tuple<std::string, int> EncryptedElement;

#endif
